--- a/IETE-Website/index.html
+++ b/IETE-Website/index.html
@@ -12,24 +12,11 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="CSS/stlyes.css" />
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="images/favicon.ico" />
     <!-- fontawesome -->
     <link
       rel="stylesheet"
@@ -43,9 +30,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
 
+
   <body>
     <section id="home-page">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <nav class="navbar navbar-expand-lg  bg-light fixed-top">
         <a class="navbar-brand ml-5"><img src="images/favicon-32x32.png" /></a>
         <button
           class="navbar-toggler"
@@ -54,23 +42,22 @@
           data-target="#navbarSupportedContent"
           aria-controls="#navbarSupportedContent"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Home</a>
+              <a class="nav-link" href="#home-page">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">About Us</a>
+              <a class="nav-link" href="#about-us">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Faculty</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Events</a>
+              <a class="nav-link" href="#events">Events</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Team</a>
@@ -78,19 +65,17 @@
             <li class="nav-item">
               <a class="nav-link" href="">Contact Us</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Gallery</a>
-            </li>
           </ul>
         </div>
       </nav>
+      
       <div class="landing-page">
-        <h1 class="content">IETE-ISF</h1>
+        <h1 class="landing-page-content">IETE-ISF</h1>
       </div>
     </section>
     <section id="about-us">
-      <h1 class="about-us-text">About Us</h1>
-      <div class="row">
+      <h1 class="about-us-text" >About Us</h1>
+      <div class="row about-us-row">
         <div class="col-lg-4">
           <div class="flip-card ">
             <div class="flip-card-inner">
@@ -152,7 +137,7 @@
       </div>
     
     </section>
-    <section class="events" style="margin-bottom: 30px;">
+    <section id="events" style="margin-bottom: 30px;">
       <h1 style="text-align: center; font-size: 4.5rem;">Events</h1>
       <div class="event-container">
         <div class="event-card">
@@ -238,5 +223,44 @@
         </div>
       </div>
     </section>
+    <section id='our_team'>
+      <h1 style="text-align: center;">Our Team</h1>
+      <h3 style="text-align: center;">IETE-ISF is proud to show the board members for the academic year 2021-2022</h3>
+      <div class="owl-carousel owl-theme">
+        <div class="item"><img src="images/PRO.jpg" alt="" ></div>
+        <div class="item"><img src="images/PRO.jpg" alt="" ></div>
+        <div class="item"><img src="images/PRO.jpg" alt="" ></div>
+        <div class="item"><img src="images/PRO.jpg" alt="" ></div>
+        <div class="item"><img src="images/PRO.jpg" alt="" ></div>
+        <div class="item"><img src="images/PRO.jpg" alt="" ></div>
+        <div class="item"><img src="images/PRO.jpg" alt="" ></div>
+        <div class="item"><img src="images/PRO.jpg" alt="" ></div>
+        <div class="item"><img src="images/PRO.jpg" alt="" ></div>
+        <div class="item"><img src="images/PRO.jpg" alt="" >></div>
+        <div class="item"><img src="images/PRO.jpg" alt="" >></div>
+        <div class="item"><img src="images/PRO.jpg" alt="" >></div>
+    </div>
+    </section>
+    <!-- bootstrap js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <!-- owl cdn -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- js file -->
+    <script src="index.js"></script>
   </body>
 </html>
